button highlight style

--- a/src/template.html
+++ b/src/template.html
@@ -10,9 +10,9 @@
     <header>Contoro</header>
 
     <nav>
-      <button class="home">Home</button>
-      <button class="menu">Menu</button>
-      <button class="about">About</button>
+      <button class="homebtn">Home</button>
+      <button class="menubtn">Menu</button>
+      <button class="aboutbtn">About</button>
     </nav>
     <div class="main">
       
